# termux-pastebin

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-termux.yml  lint.yml
scripts/: format.sh  lint.sh  run_prod.sh  run_tests.sh  stop.sh
src/: app.py  database.py  security.py
src/static/: style.css
src/templates/: base.html  home.html  login.html  my_pastes.html  view_paste.html
tests/: conftest.py  test_app.py  test_databae.py
